# rfid-attendance-system

./: .gitignore  CLAUDE.md  rfid_attendance_design.md
backend/: .env.example  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  attendance.py  department.py  employee.py  flex_setting.py  required_config.py  scan_event.py  schedule.py
backend/app/repositories/: __init__.py  attendance.py  base.py  department.py  employee.py  flex_setting.py  required_config.py  scan_event.py  schedule.py
backend/app/routers/: __init__.py  attendance.py  departments.py  employees.py  flex_settings.py  scan.py  schedules.py
backend/app/schemas/: __init__.py  attendance.py  department.py  employee.py  flex_setting.py  scan.py  schedule.py
backend/app/services/: __init__.py  scan.py
backend/app/utils/: __init__.py
backend/database/: __init__.py  init_db.py  sample_data.sql  schema.sql
